common/force-app/main/default/objects/Opportunity/fields/FY22_Investment_Value__c.field-meta.xml
<CustomField>
    <fullName>FY22_Investment_Value__c</fullName>
    <formula>Number_Of_Units__c *  FY_22_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Investment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>