common/force-app/main/default/objects/Opportunity/fields/FY22_Tax_Statement__c.field-meta.xml
<CustomField>
    <fullName>FY22_Tax_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FY22 Tax Statement</label>
    <type>Checkbox</type>
</CustomField>