common/force-app/main/default/objects/Opportunity/fields/FY22_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>FY22_Unit_Price__c</fullName>
    <label>FY22 Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>