common/force-app/main/default/objects/Opportunity/fields/FY_22_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>FY_22_Unit_Price__c</fullName>
    <formula>Invested_Product_ADMIN_FIELD__r.FY_22_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY 22 Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>