common/force-app/main/default/objects/Opportunity/fields/Gross_commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_commission__c</fullName>
    <formula>Total_Product_Price__c  *  Invested_Product_ADMIN_FIELD__r.Masterplan__r.Gross_Sales_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(OLD)Gross commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>