common/force-app/main/default/objects/Opportunity/fields/Gross_commission_n__c.field-meta.xml
<CustomField>
    <fullName>Gross_commission_n__c</fullName>
    <label>Gross commission</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>