common/force-app/main/default/objects/Opportunity/fields/Gross_Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sales_Commission__c</fullName>
    <formula>Invested_Product_ADMIN_FIELD__r.Masterplan__r.Gross_Sales_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Sales Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>