common/force-app/main/default/objects/Opportunity/fields/Holding_Cert_Temp__c.field-meta.xml
<CustomField>
    <fullName>Holding_Cert_Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holding Cert Temp</label>
    <type>Checkbox</type>
</CustomField>