common/force-app/main/default/objects/Opportunity/fields/ID_Verified__c.field-meta.xml
<CustomField>
    <fullName>ID_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Verified ADMIN</label>
    <type>Checkbox</type>
</CustomField>