common/force-app/main/default/objects/Opportunity/fields/Ingogo_FY22_Statement__c.field-meta.xml
<CustomField>
    <fullName>Ingogo_FY22_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ingogo FY22 Statement</label>
    <type>Checkbox</type>
</CustomField>