common/force-app/main/default/objects/Opportunity/fields/Initial_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Deposit_Amount__c</fullName>
    <inlineHelpText>The amount of the initial deposit paid by the buyer. This is to be paid at EOI stage.</inlineHelpText>
    <label>Initial Deposit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>