common/force-app/main/default/objects/Opportunity/fields/Initial_Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Deposit_Due_Date__c</fullName>
    <label>Initial Deposit Due Date</label>
    <type>Date</type>
</CustomField>