common/force-app/main/default/objects/Opportunity/fields/Initial_Deposit_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Deposit_Paid_Date__c</fullName>
    <inlineHelpText>The date the initial deposit was paid. Confirmation must be received by the Lawyers and filed against the Opportunity record.</inlineHelpText>
    <label>Initial Deposit Paid Date</label>
    <type>Date</type>
</CustomField>