common/force-app/main/default/objects/Opportunity/fields/International_Int_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>International_Int_Payment_Due__c</fullName>
    <label>International Int Payment Due</label>
    <type>Date</type>
</CustomField>