common/force-app/main/default/objects/Opportunity/fields/Invested_Opp_Prod_ADMIN__c.field-meta.xml
<CustomField>
    <fullName>Invested_Opp_Prod_ADMIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invested_Opp Prod_ADMIN</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>