common/force-app/main/default/objects/Opportunity/fields/Invested_Product_ADMIN_FIELD__c.field-meta.xml
<CustomField>
    <fullName>Invested_Product_ADMIN_FIELD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please disregard this field. Admin field Only!</inlineHelpText>
    <label>Invested Product_ADMIN FIELD</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>