common/force-app/main/default/objects/Opportunity/fields/Investment_Contract__c.field-meta.xml
<CustomField>
    <fullName>Investment_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Contract</label>
    <type>Checkbox</type>
</CustomField>