common/force-app/main/default/objects/Opportunity/fields/Investment_Created__c.field-meta.xml
<CustomField>
    <fullName>Investment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked automatically when investment record is created.</inlineHelpText>
    <label>Investment Created</label>
    <type>Checkbox</type>
</CustomField>