common/force-app/main/default/objects/Opportunity/fields/Investment_Limit__c.field-meta.xml
<CustomField>
    <fullName>Investment_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This filed will restrict the email to be sent out</description>
    <label>Investment Limit</label>
    <type>Checkbox</type>
</CustomField>