common/force-app/main/default/objects/Opportunity/fields/Investment_Range__c.field-meta.xml
<CustomField>
    <fullName>Investment_Range__c</fullName>
    <label>Investment Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000 to $20,000</fullName>
            </value>
            <value>
                <fullName>$25,000 to $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 to $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 to $250,000</fullName>
            </value>
            <value>
                <fullName>$250,000 to $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000 +</fullName>
            </value>
            <value>
                <fullName>$10,000 to $25,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>