common/force-app/main/default/objects/Opportunity/fields/InvestNowEmailtoVCteam__c.field-meta.xml
<CustomField>
    <fullName>InvestNowEmailtoVCteam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify VC Team_Invest Now</label>
    <type>Checkbox</type>
</CustomField>