common/force-app/main/default/objects/Opportunity/fields/Investor_Contribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Investor_Contribution_Fee__c</fullName>
    <inlineHelpText>Including GST</inlineHelpText>
    <label>Investor Contribution Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>