common/force-app/main/default/objects/Opportunity/fields/Investor_ID__c.field-meta.xml
<CustomField>
    <fullName>Investor_ID__c</fullName>
    <description>Investor ID used during document merge</description>
    <displayFormat>{0000}</displayFormat>
    <label>Investor ID</label>
    <type>AutoNumber</type>
</CustomField>