common/force-app/main/default/objects/Opportunity/fields/Investor_Updates_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Investor_Updates_OptIn__c</fullName>
    <formula>Primary_Contact__r.Account.Investor_Updates_OptIn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor_Updates_OptIn</label>
    <type>Checkbox</type>
</CustomField>