common/force-app/main/default/objects/Opportunity/fields/Is_Syncing__c.field-meta.xml
<CustomField>
    <fullName>Is_Syncing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Syncing</label>
    <type>Checkbox</type>
</CustomField>