common/force-app/main/default/objects/Opportunity/fields/Last_Activity_Update_Alert__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Update_Alert__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(StageName, &quot;Closed Lost&quot;)
),
&quot;🟢 Closed Lost&quot;,
IF(
ISPICKVAL(StageName, &quot;Closed Won&quot;),
&quot;🟢 Closed Won&quot;,
IF(
ISBLANK(LastActivityDate),
&quot;🟠 no activity&quot;,
IF(
(TODAY() - LastActivityDate) &lt;= 3,
&quot;🟢 on time&quot;,
IF(
AND(
(TODAY() - LastActivityDate) &gt; 3,
(TODAY() - LastActivityDate) &lt;= 8
),
&quot;🟠 over 3d&quot;,
IF(
(TODAY() - LastActivityDate) &gt; 8,
&quot;🔴 over 8d&quot;,
&quot;&quot;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Update Alert</label>
    <type>Text</type>
</CustomField>