common/force-app/main/default/objects/Opportunity/fields/Loss_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reasons__c</fullName>
    <label>Loss Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wasp lost tags</fullName>
            </value>
            <value>
                <fullName>CM-wasp-Timing not quite right -but still interested.</fullName>
            </value>
            <value>
                <fullName>CM-wasp-Location based</fullName>
            </value>
            <value>
                <fullName>CM-Wasp-No Trust - does not understand the model</fullName>
            </value>
            <value>
                <fullName>CM-wasp-time waster</fullName>
            </value>
            <value>
                <fullName>Dasp Lost tags</fullName>
            </value>
            <value>
                <fullName>CM- Dasp-Didn’t like the project</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-No Trust - does not understand the model</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-Personal reasons.</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-Advisor</fullName>
            </value>
            <value>
                <fullName>CM-Dasp-Other</fullName>
            </value>
            <value>
                <fullName>Claims they never clicked</fullName>
            </value>
            <value>
                <fullName>Awaiting other Development Results</fullName>
            </value>
            <value>
                <fullName>Does Not Qualify</fullName>
            </value>
            <value>
                <fullName>No Phone Number</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Project not suitable</fullName>
            </value>
            <value>
                <fullName>Set up SMSF</fullName>
            </value>
            <value>
                <fullName>Can&apos;t decide</fullName>
            </value>
            <value>
                <fullName>No funds</fullName>
            </value>
            <value>
                <fullName>Timing not right</fullName>
            </value>
            <value>
                <fullName>No Trust</fullName>
            </value>
            <value>
                <fullName>Too risky</fullName>
            </value>
            <value>
                <fullName>Bought another property</fullName>
            </value>
            <value>
                <fullName>Invested Elsewhere</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t get finance</fullName>
            </value>
            <value>
                <fullName>Don&apos;t have enough in SMSF</fullName>
            </value>
            <value>
                <fullName>No Deposit</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>