common/force-app/main/default/objects/Opportunity/fields/Maturation_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturation_Date__c</fullName>
    <inlineHelpText>If this investment has a defined term, ensure that you indicate the correct date of maturation here and that you have also checked &quot;Defined Term&quot; check box.
To update this field, please go to related tab -&gt; Click on NEW button at Investment Maturities Section</inlineHelpText>
    <label>Maturation Date</label>
    <type>Date</type>
</CustomField>