common/force-app/main/default/objects/Opportunity/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <description>This field is used by the flow &quot;Wholesale Verification&quot; to check on the type of product, and if the user has an active wholesale membership.</description>
    <inlineHelpText>This field is used by the flow &quot;Wholesale Verification&quot; to check on the type of product, and if the user has an active wholesale membership.</inlineHelpText>
    <label>Membership</label>
    <length>50</length>
    <type>Text</type>
</CustomField>