common/force-app/main/default/objects/Opportunity/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <description>Membership Status pulled from Automation in the flow Opportunity: wholesale Verified to validate if an account has an active wholesale membership associated to it.</description>
    <label>Membership Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>