common/force-app/main/default/objects/Opportunity/fields/Merged_Opp__c.field-meta.xml
<CustomField>
    <fullName>Merged_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merged Opp?</label>
    <type>Checkbox</type>
</CustomField>