common/force-app/main/default/objects/Opportunity/fields/Merged_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Merged_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Merged Opportunity)</relationshipLabel>
    <relationshipName>Merged_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>