common/force-app/main/default/objects/Opportunity/fields/Net_commission_to_VCPP__c.field-meta.xml
<CustomField>
    <fullName>Net_commission_to_VCPP__c</fullName>
    <formula>Gross_commission__c  -  Total_sales_rep_commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(OLD)Net commission to VCPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>