common/force-app/main/default/objects/Opportunity/fields/Net_commission_to_VCPP_n__c.field-meta.xml
<CustomField>
    <fullName>Net_commission_to_VCPP_n__c</fullName>
    <label>Net commission to VCPP</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>