common/force-app/main/default/objects/Opportunity/fields/Net_Sale_Price_to_SPV__c.field-meta.xml
<CustomField>
    <fullName>Net_Sale_Price_to_SPV__c</fullName>
    <formula>Total_Product_Price__c -  Gross_commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(OLD)Net Sale Price to SPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>