common/force-app/main/default/objects/Opportunity/fields/Net_Sale_Price_to_SPV_n__c.field-meta.xml
<CustomField>
    <fullName>Net_Sale_Price_to_SPV_n__c</fullName>
    <label>Net Sale Price to SPV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>