common/force-app/main/default/objects/Opportunity/fields/Next_Action_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date_Time__c</fullName>
    <label>Next Action Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>