common/force-app/main/default/objects/Opportunity/fields/Next_Step_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date_Validation__c</fullName>
    <formula>IF(
    ISPICKVAL(StageName, &quot;Closed Won&quot;) || ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    &quot;🔵 Closed Opportunity&quot;,
    IF(
        ISBLANK(Next_Action_Date_Time__c),
        &quot;☢️ No Steps&quot;,
        IF(
            Next_Action_Date_Time__c &lt;= NOW(),
            &quot;🔴 Outdated Step&quot;,
            &quot;🟢 Step on time&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Next Step Action Date is in the past then it will be red, if the date is in the future, then it will be green.</inlineHelpText>
    <label>Next Step Date Validation</label>
    <type>Text</type>
</CustomField>