common/force-app/main/default/objects/Opportunity/fields/Number_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Units__c</fullName>
    <formula>Unit_Certificate_Amount__c  /  Invested_Opp_Prod_ADMIN__r.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Holdings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>