common/force-app/main/default/objects/Opportunity/fields/Off_Market_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Off_Market_Transfer__c</fullName>
    <label>Off Market Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>