common/force-app/main/default/objects/Opportunity/fields/Old_Transferred_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Old_Transferred_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Transferred Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Old Transferred Opportunity)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>