common/force-app/main/default/objects/Opportunity/fields/Opp_Temp_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Temp_ID__c</fullName>
    <label>Opp Temp ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>