common/force-app/main/default/objects/Opportunity/fields/Opportunity_auto_number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_auto_number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Opportunity auto number</label>
    <type>AutoNumber</type>
</CustomField>