common/force-app/main/default/objects/Opportunity/fields/Opportunity_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>