common/force-app/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <formula>Account.Member_ID__c  + &quot; O-&quot; +  Opportunity_auto_number__c + &quot; &quot; + Related_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment ID</label>
    <type>Text</type>
</CustomField>