common/force-app/main/default/objects/Opportunity/fields/Opportunity_IDONLY__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_IDONLY__c</fullName>
    <formula>&quot; O-&quot; + Opportunity_auto_number__c + &quot; &quot; + Related_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>