common/force-app/main/default/objects/Opportunity/fields/Original_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_ID__c</fullName>
    <description>Original Lead ID</description>
    <label>Original Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>