common/force-app/main/default/objects/Opportunity/fields/Original_Reason_for_enquiry__c.field-meta.xml
<CustomField>
    <fullName>Original_Reason_for_enquiry__c</fullName>
    <formula>TEXT ( Primary_Contact__r.Reason_for_Enquiry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Reason for enquiry</label>
    <type>Text</type>
</CustomField>