common/force-app/main/default/objects/Opportunity/fields/Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience__c</fullName>
    <label>Overall Experience</label>
    <type>TextArea</type>
</CustomField>