common/force-app/main/default/objects/Opportunity/fields/PA_CRN__c.field-meta.xml
<CustomField>
    <fullName>PA_CRN__c</fullName>
    <formula>Primary_Contact__r.Account.BPAY_CRN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PA CRN</label>
    <type>Text</type>
</CustomField>