common/force-app/main/default/objects/Opportunity/fields/Person_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Email__c</fullName>
    <formula>Account.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Person Account&apos;s Email ID</inlineHelpText>
    <label>Person Account Email</label>
    <type>Text</type>
</CustomField>