common/force-app/main/default/objects/Opportunity/fields/Person_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_ID__c</fullName>
    <formula>Primary_Contact__r.Account.PersonContact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account ID</label>
    <type>Text</type>
</CustomField>