common/force-app/main/default/objects/Opportunity/fields/Picaluna_Contract__c.field-meta.xml
<CustomField>
    <fullName>Picaluna_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picaluna Contract</label>
    <type>Checkbox</type>
</CustomField>