common/force-app/main/default/objects/Opportunity/fields/Platinum_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Partner_Status__c</fullName>
    <formula>Primary_Contact__r.Account.Platinum_Partners_Initial_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platinum Partner Status</label>
    <type>Checkbox</type>
</CustomField>