common/force-app/main/default/objects/Opportunity/fields/Previous_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opportunity_Id__c</fullName>
    <description>This is the tempory field which is used to hold the data, for redemption purpose.</description>
    <label>Previous Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>