common/force-app/main/default/objects/Opportunity/fields/Primary_Contact_id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_id__c</fullName>
    <formula>Primary_Contact__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact ID</label>
    <type>Text</type>
</CustomField>