common/force-app/main/default/objects/Opportunity/fields/Primary_Contact_ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID_Checked__c</fullName>
    <formula>Primary_Contact__r.ID_Checked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact ID Checked</label>
    <type>Checkbox</type>
</CustomField>