common/force-app/main/default/objects/Opportunity/fields/Primary_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mobile__c</fullName>
    <formula>Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Mobile</label>
    <type>Text</type>
</CustomField>