common/force-app/main/default/objects/Opportunity/fields/Primary_Contact_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ZIP__c</fullName>
    <formula>Primary_Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact ZIP</label>
    <type>Text</type>
</CustomField>