common/force-app/main/default/objects/Opportunity/fields/Product_Name_Temp__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Temp__c</fullName>
    <label>Product Name Temp</label>
    <length>30</length>
    <type>Text</type>
</CustomField>