common/force-app/main/default/objects/Opportunity/fields/Product_rolling_from__c.field-meta.xml
<CustomField>
    <fullName>Product_rolling_from__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this product is rolling over then choose the product the investor is rolling from</inlineHelpText>
    <label>Product rolling from</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Rollover_Investment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Product rolling from)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>