common/force-app/main/default/objects/Opportunity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product Type, Wholesale or Retail</description>
    <inlineHelpText>Product Type, Wholesale or Retail</inlineHelpText>
    <label>Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>